feat： 浏览器工具插件描述

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "rsl-tools",
-  "description": "",
+  "description": "这是我的浏览器工具插件，欢迎交流！",
   "author": "15555169279@163.com",
   "version": "1.0",
   "manifest_version": 3,
