feat： 可选区域框引入

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
   },
   "content_scripts": [
     {
-      "js": ["content_scripts.js"],
+      "css": ["./libs/cropper.min.css"],
+      "js": ["content_scripts.js", "./libs/cropper.min.js"],
       "matches": ["<all_urls>"]
     }
   ],
